--- a/flask_app/templates/base.html
+++ b/flask_app/templates/base.html
@@ -20,28 +20,20 @@
 {#          <li class="nav-item active">#}
 {#            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>#}
 {#          </li>#}
-            {% if 'log' in session %}
-                {% if session["log"] == True %}
-                    <li class="nav-item">
-                    <a class="nav-link" href="/home">Home</a>
-                  </li>
-                    <li class="nav-item">
-                    <a class="nav-link" href="#">Profile</a>
-                  </li>
-                    <li class="nav-item">
-                    <a class="nav-link" href="/log_out">Log out</a>
-                  </li>
-                {% else %}
-                    <li class="nav-item">
-                    <a class="nav-link" href="/log_home">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="/register">Register</a>
-                  </li>
-                    <li class="nav-item">
-                    <a class="nav-link" href="/login">Login</a>
-                  </li>
-                {% endif %}
+            {% if "usr" in session %}
+                <li class="nav-item">
+                <a class="nav-link" href="/profile">Profile</a>
+              </li>
+                <li class="nav-item">
+                <a class="nav-link" href="/log_out">Log out</a>
+              </li>
+            {% else %}
+              <li class="nav-item">
+                <a class="nav-link" href="/register">Register</a>
+              </li>
+                <li class="nav-item">
+                <a class="nav-link" href="/login">Login</a>
+              </li>
             {% endif %}
 {#          <li class="nav-item dropdown">#}
 {#            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">#}
