--- a/flask_app/templates/film.html
+++ b/flask_app/templates/film.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% block title %}Film{% endblock %}
 {% block content %}
-<h1>{{ film.name }}</h1>
-<h2>{{ film.author }}</h2>
+<h1>Film name: {{ film.name }}</h1>
+<h2>Added by: {{ film.author }}</h2>
 
 
     <hr>
@@ -10,19 +10,19 @@
 {{ film.content }}
 </p>
 
-<a href="/posts/{{ post.post_id }}/edit">Edit post</a><br/><br/>
-<form action="/posts/{{ post.post_id }}/delete" method="post">
-  <button type="submit">Delete post</button>
+<a href="/home/{{ film.film_id }}/edit">Edit film content</a><br/><br/>
+<form action="/home/{{ film.film_id }}/delete" method="POST">
+  <button type="submit">Delete film</button>
 </form>
 <br/>
 
-<form action="/comments/new" method="post">
+<form action="/new_comment" method="POST">
   <input type="text" name="message">
-  <input type="hidden" name="post_id" value="{{ post.post_id }}">
+  <input type="hidden" name="film_id" value="{{ film.film_id }}">
   <button type="submit">Create comment</button>
 </form>
 <div id="comments" style="border: 1px solid black">
-{% for comment in post.comments() %}
+{% for comment in film.comments() %}
   {{ comment.message }}
   <br/>
   <br/>
