--- a/flask_app/templates/login.html
+++ b/flask_app/templates/login.html
@@ -22,7 +22,7 @@
   </div>
 
   <div class="container" style="background-color:#f1f1f1">
-      <a href = "/log_home">
+      <a href = "/home">
             <button type="button" class="cancelbtn">Cancel</button>
       </a>
   </div>
