ratings and search added

--- a/flask_app/templates/edit_film.html
+++ b/flask_app/templates/edit_film.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Add film{% endblock %}
+{% block title %}Edit film{% endblock %}
 {% block content %}
 <form action="#" method="POST">
     <h1>Film</h1>
