--- a/flask_app/templates/base.html
+++ b/flask_app/templates/base.html
@@ -25,6 +25,9 @@
                 <a class="nav-link" href="/profile">Profile</a>
               </li>
                 <li class="nav-item">
+                <a class="nav-link" href="/ratings">Ratings</a>
+              </li>
+                <li class="nav-item">
                 <a class="nav-link" href="/log_out">Log out</a>
               </li>
             {% else %}
@@ -50,10 +53,10 @@
 {#            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Log out</a>#}
 {#          </li>#}
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
+{#        <form class="form-inline my-2 my-lg-0">#}
+{#          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">#}
+{#          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>#}
+{#        </form>#}
       </div>
     </nav>
 
