--- a/flask_app/templates/add_film.html
+++ b/flask_app/templates/add_film.html
@@ -1,14 +1,15 @@
 {% extends "base.html" %}
 {% block title %}Add film{% endblock %}
 {% block content %}
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='add_film.css') }}">
 <form action="#" method="POST">
-    <h1>Film</h1>
-    <br/><br/><br/>
-    <label>Film name: </label>
+    <label><h2>Enter film name: </h2></label>
+</br>
     <input type="text" placeholder="Enter film name" name="film_name" required>
     </br>
 
-    <label>Content: </label>
+    <label><h2>Enter film content: </h2></label>
+</br>
     <input type="text" placeholder="Enter film content" name="film_content" required>
     </br>
 
