--- a/flask_app/templates/film.html
+++ b/flask_app/templates/film.html
@@ -18,7 +18,7 @@
         <br/>
     {% endif %}
 
-<form action="/new_comment" method="POST">
+<form action="/new_comment/{{ edit }}" method="POST">
   <input type="text" name="message">
   <input type="hidden" name="film_id" value="{{ film.film_id }}">
   <button type="submit">Create comment</button>
