--- a/flask_app/templates/film.html
+++ b/flask_app/templates/film.html
@@ -11,11 +11,11 @@
 </p>
 
     {% if edit %}
-        <a href="/home/{{ film.film_id }}/edit">Edit film content</a><br/><br/>
+        <a href="/home/{{ film.film_id }}/edit">Edit film content</a><br><br>
         <form action="/home/{{ film.film_id }}/delete" method="POST">
           <button type="submit">Delete film</button>
         </form>
-        <br/>
+        <br>
     {% endif %}
 
 <form action="/new_comment/{{ edit }}" method="POST">
@@ -26,8 +26,8 @@
 <div id="comments" style="border: 1px solid black">
 {% for comment in film.comments() %}
   {{ film.author }}: {{ comment.message }}
-  <br/>
-  <br/>
+  <br>
+  <br>
 {% endfor %}
 </div>
 {% endblock %}
