--- a/flask_app/templates/films.html
+++ b/flask_app/templates/films.html
@@ -3,15 +3,15 @@
 {% block content %}
     {% if usr %}
         <h1>Hello {{ usr }}</h1>
-        <br/><br/><br/>
+        <br><br><br>
         <h2>If you want to add new film to our collection:   <a href="/profile/add_film">Click here</a></h2>
-        <br/>
+        <br>
         <h1>You previously added these films: </h1>
     {% else %}
         <h1>Here is our films collection: </h1>
     {% endif %}
 
-    <br/><br/>
+    <br><br>
     <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="search" id="myInput" onkeyup="searchFunction()"
                placeholder="Search for names.." aria-label="Search">
@@ -33,7 +33,7 @@
                         <a href="/home/{{film.film_id}}/{{ edit }}">{{film.name}}</a>
                     </td>
                     <td>{{ film.author }}</td>
-                    <td>{{ film.content }}</td>
+                    <td>{{ film.content[:20] }}...</td>
                 </tr>
             {% endfor %}
         {% endif %}
