--- a/flask_app/templates/ratings.html
+++ b/flask_app/templates/ratings.html
@@ -18,7 +18,7 @@
     <tr>
         <td>{{name}}</td>
         <td>{{author}}</td>
-        <td>{{content[:20]}}</td>
+        <td>{{content[:20]}}...</td>
         <td>{{rating}}</td>
         <td>
             <a href="/ratings/{{film_id}}" class="btn btn-default">Add rating</a>
