--- a/flask_app/templates/base.html
+++ b/flask_app/templates/base.html
@@ -8,7 +8,7 @@
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e2cbba;">
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #87eb7e;">
       <a class="navbar-brand" href="/home">Film catalog</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
               aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -17,9 +17,6 @@
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-{#          <li class="nav-item active">#}
-{#            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>#}
-{#          </li>#}
             {% if "usr" in session %}
                 <li class="nav-item">
                 <a class="nav-link" href="/profile">Profile</a>
@@ -38,25 +35,7 @@
                 <a class="nav-link" href="/login">Login</a>
               </li>
             {% endif %}
-{#          <li class="nav-item dropdown">#}
-{#            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">#}
-{#              Dropdown#}
-{#            </a>#}
-{#            <div class="dropdown-menu" aria-labelledby="navbarDropdown">#}
-{#              <a class="dropdown-item" href="#">Action</a>#}
-{#              <a class="dropdown-item" href="#">Another action</a>#}
-{#              <div class="dropdown-divider"></div>#}
-{#              <a class="dropdown-item" href="#">Something else here</a>#}
-{#            </div>#}
-{#          </li>#}
-{#          <li class="nav-item">#}
-{#            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Log out</a>#}
-{#          </li>#}
         </ul>
-{#        <form class="form-inline my-2 my-lg-0">#}
-{#          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">#}
-{#          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>#}
-{#        </form>#}
       </div>
     </nav>
 
