--- a/flask_app/templates/add_film.html
+++ b/flask_app/templates/add_film.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Add film{% endblock %}
 {% block content %}
-<form action="#" method="POST" onsubmit="addlines()">
+<form action="#" method="POST">
     <h2>Enter film name: </h2>
     <input type="text" placeholder="Enter film name" name="film_name" required>
     <br><br><br>
